--- a/idz/zdebug/common/v150/concurrentdcc/concurrentdcc_en.html
+++ b/idz/zdebug/common/v150/concurrentdcc/concurrentdcc_en.html
@@ -17,7 +17,7 @@
 </head>
 </head>
 <body>
-		<h2>Conditional Breakpoint</h2>
-		<p>for language japanese</p>
-		<p>effective version IDz 15.0.0</p>
+		<h2>Concurrent Debug and Code Coverage</h2>
+		<p>for language english</p>
+		<p>Since V15.0.1</p>
 </body>	
